# FrontEnd-Mobile-

./: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: payment.html
app/src/main/cpp/: CMakeLists.txt  anti_debug.cpp  anti_frida.cpp  image_processor_lib.cpp  integrity_check.cpp  ksu_detector.cpp  native-lib.cpp  vulnerable_webp_parser.cpp
app/src/main/res/drawable/: bg_call_center.xml  bg_chat_bot.xml  bg_chat_user.xml  bg_circle_primary.xml  bg_edittext_dark.xml  bg_edittext_rounded.xml  bg_menu_status_dash.xml  bg_round_button.xml  bg_send_button.xml  border.xml  edit_text_background.xml  ic_close.xml  ic_send.xml
app/src/main/res/layout/: activity_change_password.xml  activity_chat.xml  activity_check_password.xml  activity_customer_center.xml  activity_deeplink.xml  activity_edit_my_info.xml  activity_find_password.xml  activity_gift_confirmation.xml  activity_inquiry.xml  activity_inquiry_detail.xml  activity_inquiry_list.xml  activity_inquiry_write.xml  activity_login.xml  activity_main.xml  activity_map.xml  activity_menu.xml  activity_my_info.xml  activity_notice.xml  activity_payment.xml  activity_payment_history.xml  activity_payment_success.xml  activity_point_charge.xml  activity_point_gift.xml  activity_purchase_success.xml  activity_purchase_ticket.xml  activity_register.xml  activity_rent_end.xml  activity_reset_password.xml  activity_return_bike.xml  activity_splash.xml  activity_ticket.xml  activity_user_history.xml  fragment_history.xml  item_chat_bot.xml  item_chat_user.xml  item_gift_history.xml  item_inquiry.xml  (+2 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+169 files in other folders)
